<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.jsf.app</groupId>
	<artifactId>app-mon</artifactId>
	<packaging>pom</packaging>
	<name>xxx-yyyy</name>
	<version>1.72.0-SNAPSHOT</version>

	<properties>
		<spring-security.version>3.2.6.RELEASE</spring-security.version>
		<hibernate.validator.version>5.1.2.Final</hibernate.validator.version>
		<javassist.version>3.18.1-GA</javassist.version>
		<hibernate.version>5.4.3.Final</hibernate.version>
		<app.processor.version>1.72.0-SNAPSHOT</app.processor.version>
		<doclint>none</doclint>
		<java.version>1.8</java.version>
		<build-tools>build-tools</build-tools>
		<powermock.version>1.6.6</powermock.version>
		<junit.version>4.12</junit.version>
		<hamcrest-all.version>1.3</hamcrest-all.version>
		<reflections.version>0.9.10</reflections.version>
		<JUnitParams.version>1.0.4</JUnitParams.version>
		<testng.version>6.8.8</testng.version>
		<poi.version>3.15</poi.version>
		<report-service.version>1.0.0</report-service.version>
		<surefire.version>2.19.1</surefire.version>
		<querydsl.version>4.1.3</querydsl.version>
		<rewrite.version>3.4.1.Final</rewrite.version>
		<facelets-taglib.version>0.5</facelets-taglib.version>
		<mockito.version>1.10.19</mockito.version>
		<commons.version>1.0.51</commons.version>
		<xxx-data-exportation-client.version>1.0.5</xxx-data-exportation-client.version>
		<app.commons.version>1.22.0</app.commons.version>
		<!-- Nao usar joda-time superior ao 2.3, pois sao incompativeis com NSN (ng-repository-api) -->
		<joda-time.version>2.3</joda-time.version>
		<spring-core.version>5.1.8.RELEASE</spring-core.version>
		<spring-data-jpa.version>2.1.9.RELEASE</spring-data-jpa.version>
		<spring-web.version>5.1.8.RELEASE</spring-web.version>
		<jackson.data-bind.version>2.9.8</jackson.data-bind.version>
		<spring.mock.version>2.0.8</spring.mock.version>
		<gerador.version>1.0.0</gerador.version>
		<yyyy-arch.version>1.0.19-SNAPSHOT</yyyy-arch.version>
		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
		<xxx.exportation.filters.version>0.0.7</xxx.exportation.filters.version>
		<!-- prod [:compressed] - desenv [:expanded] -->
		<sass.OutputStyle>:compressed</sass.OutputStyle>
	</properties>
	<scm>
		<connection>scm:git:ssh://gitlab@git.jsf.com/xxx/xxx-yyyy.git</connection>
		<developerConnection>scm:git:ssh://gitlab@git.jsf.com/xxx/xxx-yyyy.git</developerConnection>
		<url>https://git.jsf.com/xxx/xxx-yyyy.git</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>apps.repo</id>
			<name>apps-maven-release</name>
			<url>http://repo.jsf.com/apps-maven-release</url>
		</repository>
		<snapshotRepository>
			<id>apps-snapshot.repo</id>
			<name>apps-maven-snapshot</name>
			<url>http://repo.jsf.com/apps-maven-snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.jsf.xxx.reports</groupId>
				<artifactId>report-client</artifactId>
				<version>${report-service.version}</version>
			</dependency>
			<!-- Arch Dependencies -->
			<dependency>
				<groupId>com.jsf.yyyy</groupId>
				<artifactId>yyyy-theme</artifactId>
				<version>${yyyy-arch.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jsf.yyyy</groupId>
				<artifactId>yyyy-web</artifactId>
				<version>${yyyy-arch.version}</version>
			</dependency>
			<!-- Partners -->
			<dependency>
				<groupId>com.jsf.app</groupId>
				<artifactId>app-enums</artifactId>
				<version>${app.commons.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jsf.app</groupId>
				<artifactId>xxx-utils</artifactId>
				<version>${app.commons.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jsf.app</groupId>
				<artifactId>app-xml</artifactId>
				<version>${app.commons.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-servlet</artifactId>
				<version>${rewrite.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-integration-faces</artifactId>
				<version>${rewrite.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jsf.xxx</groupId>
				<artifactId>commons-vtd-xml</artifactId>
				<version>${commons.version}</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${joda-time.version}</version>
			</dependency>
			<dependency>
	            <groupId>com.jsf.xxx</groupId>
	            <artifactId>commons-nsn</artifactId>
	            <version>${commons.version}</version>
        	</dependency>
            <dependency>
	            <groupId>com.jsf.xxx</groupId>
	            <artifactId>commons-xml</artifactId>
	            <version>${commons.version}</version>
	        </dependency>	
	        <dependency>
	            <groupId>com.jsf.xxx</groupId>
	            <artifactId>commons-utils</artifactId>
	            <version>${commons.version}</version>
	        </dependency>
			<dependency>
           		<groupId>org.springframework</groupId>
           		<artifactId>spring-aop</artifactId>
           		<version>${spring-core.version}</version>
        	</dependency>
			<dependency>
           		<groupId>org.springframework</groupId>
           		<artifactId>spring-orm</artifactId>
           		<version>${spring-core.version}</version>
        	</dependency>
			<dependency>
				<groupId>com.jsf.xxx</groupId>
				<artifactId>xxx-data-exportation-client</artifactId>
				<version>${xxx-data-exportation-client.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-data-solr</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring-web.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring-web.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.data-bind.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>2.2</version>
		</dependency>

		<!-- Log Dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
			<version>1.7.2</version>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.6</version>
			<scope>provided</scope>
		</dependency>

		<!-- POI -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
		</dependency>

		<!-- Tests Dependencies -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4-rule</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-classloading-objenesis</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-javaagent</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-reflect</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-testng</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
	    <dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>${hamcrest-all.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${reflections.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>pl.pragmatists</groupId>
			<artifactId>JUnitParams</artifactId>
			<version>${JUnitParams.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-mock</artifactId>
		    <version>${spring.mock.version}</version>
		    <scope>test</scope>
		</dependency>

		<!-- QueryDSL Dependencies -->
		<dependency>
			<groupId>com.querydsl</groupId>
			<artifactId>querydsl-core</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.querydsl</groupId>
			<artifactId>querydsl-apt</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.querydsl</groupId>
			<artifactId>querydsl-jpa</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-jdk8</artifactId>
			<version>${org.mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${org.mapstruct.version}</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<check>
							<branchRate>75</branchRate>
							<lineRate>85</lineRate>
							<haltOnFailure>true</haltOnFailure>
							<totalBranchRate>75</totalBranchRate>
							<totalLineRate>85</totalLineRate>
							<packageLineRate>85</packageLineRate>
							<packageBranchRate>75</packageBranchRate>
						</check>
						<quiet>true</quiet>
						<aggregate>true</aggregate>
						<formats>
							<format>html</format>
							<format>xml</format>
						</formats>
						<instrumentation>
							<ignoreTrivial>true</ignoreTrivial>
							<ignoreMethodAnnotation>lombok.Generated</ignoreMethodAnnotation>
						</instrumentation>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
					<configuration>
						<skipSource>true</skipSource>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.8</version>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
					<configuration>
						<deployAtEnd>true</deployAtEnd>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											xml-maven-plugin
										</artifactId>
										<versionRange>
											[1.0,)
										</versionRange>
										<goals>
											<goal>transform</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.5.0</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>git submodule update</id>
						<phase>initialize</phase>
						<configuration>
							<executable>git</executable>
							<arguments>
								<argument>submodule</argument>
								<argument>update</argument>
								<argument>--init</argument>
								<argument>--recursive</argument>
								<argument>--remote</argument>
								<argument>--merge</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<branchName>branches/${project.version}</branchName>
					<scmCommentPrefix>NFE-0000 - RELEASE &gt; </scmCommentPrefix>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<preparationGoals>clean install</preparationGoals>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${surefire.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/Abstract*.java</exclude>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                    <parallel>classes</parallel>
                    <threadCount>5</threadCount>
                    <forkCount>1</forkCount>
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
		</plugins>
	</build>


	<modules>
		<module>core</module>
		<module>web</module>
	
	</modules>

	<profiles>
		<profile>
			<id>tomcat</id>
			<dependencies>
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>javax.servlet-api</artifactId>
					<version>3.1.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>javax.servlet.jsp</groupId>
					<artifactId>jsp-api</artifactId>
					<version>2.1</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.tomcat.maven</groupId>
						<artifactId>tomcat7-maven-plugin</artifactId>
						<version>2.2</version>
						<configuration>
							<path>/xxx</path>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
